--- a/src/scss/_shared/_fonts.scss
+++ b/src/scss/_shared/_fonts.scss
@@ -63,3 +63,4 @@
 /// @include mixinFontFace("SF-Pro-Text", "-Heavy", "../fonts/", 800, otf);
 ///
 /// ===============
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
