Gulp create sprite SVG - fix padding.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -38,7 +38,7 @@
 //@import "_macros/title";
 //@import "_macros/btn";
 //@import "_macros/modal";
-@import "_macros/form";
+//@import "_macros/form";
 ///
 /// COMPONENTS
 /// ===============
