--- a/src/pug/utilities/_mixin.pug
+++ b/src/pug/utilities/_mixin.pug
@@ -1,5 +1,8 @@
 //- MIXIN :: START
 
+include ./_mixin/_title
+include ./_mixin/_subtitle
+include ./_mixin/_btn
 include ./_mixin/_svg-icon
 include ./_mixin/_picture
 include ./_mixin/_logotype
@@ -8,6 +11,5 @@ include ./_mixin/_swiper
 include ./_mixin/_modal
 include ./_mixin/_nav
 include ./_mixin/_form
-
 
 //- MIXIN :: END
