--- a/src/scss/_macros/_title.scss
+++ b/src/scss/_macros/_title.scss
@@ -1,5 +1,13 @@
 // TITLE :: START
 
-.c-title {}
+.c-title {
+  &__text {
+    &-wrap {}
+  }
+
+  &__icon {
+    &-wrap {}
+  }
+}
 
 // TITLE :: END
