--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -36,6 +36,7 @@
 //@import "_macros/logotype";
 //@import "_macros/nav";
 //@import "_macros/title";
+//@import "_macros/subtitle";
 //@import "_macros/btn";
 //@import "_macros/modal";
 //@import "_macros/form";
