Small refactor, add new variable for responsive.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,9 +1,9 @@
 ---
-title: Home
+title: SmallTMPL
 
-contentClassName: p-home
+pageClassName: p-home
 ---
 extends shared/_layout
 
 block content
-  div.body(class!= contentClassName)
+  div.body(class!= pageClassName)
