--- a/src/scss/_macros/_form.scss
+++ b/src/scss/_macros/_form.scss
@@ -9,7 +9,7 @@ $form-width: 600px;
 
 // group
 $form-field-group-two-margin: 15px;
-$form-field-group-three-margin: $form-field-group-two-margin + 5px;
+$form-field-group-three-margin: 15px;
 
 // field
 $form-field-margin: 30px;
@@ -23,6 +23,7 @@ $form-field-textarea-height: 150px;
 $form-label-height: auto;
 $form-label-margin-bottom: 10px;
 $form-label-font-size: 16px;
+$form-label-font-weight: normal;
 
 // input
 $form-input-border-radius: 5px;
@@ -32,7 +33,10 @@ $form-input-box-shadow: none;
 $form-input-padding: 0 20px;
 $form-input-color: #000;
 $form-input-font-size: 16px;
+$form-input-font-weight: normal;
 $form-input-placeholder-color: #666;
+$form-input-placeholder-font-size: 16px;
+$form-input-placeholder-font-weight: normal;
 
 // radio
 $form-radio-icon-wrapper-width: 30px;
@@ -43,6 +47,7 @@ $form-radio-icon-border-width: 1px;
 $form-radio-icon-border-color-inactive: rgba(#000, 0.5);
 $form-radio-icon-border-color-active: rgba(#000, 1);
 $form-radio-font-size: 16px;
+$form-radio-font-weight: normal;
 $form-radio-icon-inner-width: $form-radio-icon-width / 2;
 $form-radio-icon-inner-height: $form-radio-icon-height / 2;
 $form-radio-icon-inner-border-radius: 100%;
@@ -57,6 +62,7 @@ $form-checkbox-icon-border-width: 1px;
 $form-checkbox-icon-border-color-inactive: rgba(#000, 0.5);
 $form-checkbox-icon-border-color-active: rgba(#000, 1);
 $form-checkbox-font-size: 16px;
+$form-checkbox-font-weight: normal;
 $form-checkbox-icon-inner-width: 6px;
 $form-checkbox-icon-inner-height: $form-checkbox-icon-inner-width * 2;
 $form-checkbox-icon-inner-border-color: rgba(#000, 1);
@@ -71,6 +77,7 @@ $form-select-icon-width: 50px;
 $form-select-value-padding-left: 20px;
 $form-select-value-color: #000;
 $form-select-value-font-size: $form-input-font-size;
+$form-select-value-font-weight: normal;
 $form-select-placeholder-color: $form-input-placeholder-color;
 
 // textarea
@@ -81,6 +88,7 @@ $form-textarea-box-shadow: $form-input-box-shadow;
 $form-textarea-padding: 20px;
 $form-textarea-color: $form-input-color;
 $form-textarea-font-size: $form-input-font-size;
+$form-textarea-font-weight: normal;
 $form-textarea-placeholder-color: $form-input-placeholder-color;
 
 // notify
@@ -113,13 +121,13 @@ $form-notify-font-weight: bold;
 
     &--two {
       .c-form__group-col {
-        width: calc(50% - #{$form-field-group-two-margin});
+        width: calc((100% - #{$form-field-group-two-margin}) / 2);
       }
     }
 
     &--three {
       .c-form__group-col {
-        width: calc((100% / 3) - #{$form-field-group-three-margin});
+        width: calc((100% - #{$form-field-group-three-margin}) / 3);
       }
     }
 
@@ -341,6 +349,7 @@ $form-notify-font-weight: bold;
     height: $form-label-height;
     margin-bottom: $form-label-margin-bottom;
     font-size: $form-label-font-size;
+    font-weight: $form-label-font-weight;
     @include transition(color);
   }
 
@@ -365,6 +374,8 @@ $form-notify-font-weight: bold;
     color: $form-input-color;
     @include inputPlaceholder {
       color: $form-input-placeholder-color;
+      font-size: $form-input-placeholder-font-size;
+      font-weight: $form-input-placeholder-font-weight;
     }
   }
 
@@ -374,6 +385,7 @@ $form-notify-font-weight: bold;
     border-radius: $form-input-border-radius;
     box-shadow: $form-input-box-shadow;
     font-size: $form-input-font-size;
+    font-weight: $form-input-font-weight;
     @include transition(border-color, color);
 
     &-wrapper {
@@ -410,6 +422,7 @@ $form-notify-font-weight: bold;
       padding-left: $form-select-value-padding-left;
       color: $form-select-placeholder-color;
       font-size: $form-select-value-font-size;
+      font-weight: $form-select-value-font-weight;
       @include transition(color);
 
       .is-choose & {
@@ -458,6 +471,7 @@ $form-notify-font-weight: bold;
     border-radius: $form-textarea-border-radius;
     box-shadow: $form-textarea-box-shadow;
     font-size: $form-textarea-font-size;
+    font-weight: $form-textarea-font-weight;
     @include transition(border-color, color);
 
     &-wrapper {
@@ -541,6 +555,7 @@ $form-notify-font-weight: bold;
     &-text {
       max-width: calc(100% - #{$form-radio-icon-wrapper-width});
       font-size: $form-radio-font-size;
+      font-weight: $form-radio-font-weight;
     }
   }
 
@@ -593,6 +608,7 @@ $form-notify-font-weight: bold;
     &-text {
       max-width: calc(100% - #{$form-checkbox-icon-wrapper-width});
       font-size: $form-checkbox-font-size;
+      font-weight: $form-checkbox-font-weight;
     }
   }
 
