Modify gulp task. Remove un-use packages.

--- a/src/pug/shared/_style.pug
+++ b/src/pug/shared/_style.pug
@@ -1,9 +1,6 @@
 // STYLE :: START
 
-if(env)
-  link(rel="stylesheet" href="css/bundle.min.css")
-else
-  link(rel="stylesheet" href="css/vendor.css")
-  link(rel="stylesheet" href="css/app.css")
+link(rel="stylesheet" href="css/vendor.css")
+link(rel="stylesheet" href="css/app.min.css")
 
 // STYLE :: END
