--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,9 +8,9 @@
 //@import "_generated/spriteFont";
 
 /// SHARED
-@import "_shared/fonts";
+//@import "_shared/fonts";
 @import "_shared/main-setting-reset";
-@import "_shared/grid";
+//@import "_shared/grid";
 @import "_shared/common";
 //@import "_shared/magnificPopup";
 //@import "_shared/swiper";
