Modify gulp task. Remove un-use packages. Upgrade packages to latest. Created new list pages preview page.

--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -1,11 +1,24 @@
 // META TAGS
 meta(charset="utf-8")
-meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0")
+
 meta(http-equiv="Content-type" content="text/html; charset=utf-8")
 meta(http-equiv="x-ua-compatible" content="ie=edge")
-meta(name="description" content="")
-meta(name="keywords" content="")
+meta(http-equiv="Content-Style-Type" content="text/css")
+meta(http-equiv="Content-Script-Type" content="text/javascript")
+
+meta(name="format-detection" content="telephone=yes")
+meta(name="HandheldFriendly" content="true")
+
+meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0")
+
 meta(name="author" content="")
+meta(name="designer" content="")
+meta(name="publisher" content="")
+meta(name="keywords" content="")
+meta(name="description" content="")
+meta(name="robots" content="index,follow")
+meta(name="distribution" content="web")
+meta(name="robots" content="noodp")
 
 // TITLE
 title!= title
