--- a/src/scss/_shared/_main-setting-reset.scss
+++ b/src/scss/_shared/_main-setting-reset.scss
@@ -19,15 +19,13 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  min-height: 100vh;
   margin: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: #ffffff;
   line-height: 1.42857143;
   font-size: 14px;
   font-weight: normal;
-  font-family: "Roboto", sans-serif;
+  font-family: "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
