Modify gulp task. Clear project files.

--- a/src/scss/_shared/_main-setting-reset.scss
+++ b/src/scss/_shared/_main-setting-reset.scss
@@ -29,7 +29,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  > .body {
+  > .main {
     display: flex;
     flex-direction: column;
     justify-content: center;
