--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,4 +6,4 @@ pageClassName: p-home
 extends shared/_layout
 
 block content
-  div.body(class!= pageClassName)
+  main.main(class!= pageClassName)
