Updated files and fixed errors.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,6 +21,8 @@
 //@import "_macros/logotype";
 //@import "_macros/title";
 //@import "_macros/subtitle";
+//@import "_macros/desc";
+//@import "_macros/label";
 //@import "_macros/btn";
 //@import "_macros/modal";
 
